[gd_scene load_steps=4 format=3 uid="uid://boqje1vhb8hte"]

[ext_resource type="Script" uid="uid://c68jbywnqc3i" path="res://enhanced_proto_controller.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://8j3k4dcnvgl8" path="res://assets/models/Martial_Hero_Kid_0710004921_texture.fbx" id="2_3m61y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.4
height = 1.8

[node name="EnhancedPlayerCharacter" type="CharacterBody3D"]
script = ExtResource("1_script")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="CharacterModel" parent="." instance=ExtResource("2_3m61y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87105, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="ThirdPersonCamera" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
current = true
